Cambio de color

--- a/src/app/pages/configuracion/configuracion.page.html
+++ b/src/app/pages/configuracion/configuracion.page.html
@@ -22,7 +22,7 @@
             <ion-datetime color="tertiary" value="2019-01-01" placeholder="Select Date"></ion-datetime>
         </ion-item>
 
-        <ion-item>
+        <ion-item color="dark">
             <ion-label>Notificación cada</ion-label>
             <ion-select value="notifications" interface="action-sheet">
                 <ion-select-option value="1">1 hora</ion-select-option>
