--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,6 +1,6 @@
-<ion-tabs>
+<ion-tabs id="tabs">
 
-    <ion-tab-bar slot="bottom" color="dark">
+    <ion-tab-bar #myTabBar id="myTabBar" slot="bottom" color="dark">
         <ion-tab-button tab="tab1">
             <ion-icon name="clipboard"></ion-icon>
             <ion-label>Pendientes</ion-label>
